# cookiecutter-qcdb-py

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .travis.yml  CMakeLists.txt
{{cookiecutter.project_slug}}/cmake/: {{cookiecutter.project_slug}}Config.cmake.in
{{cookiecutter.project_slug}}/tests/: addons.py  conftest.py  test_basics.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  driver.py  metadata.py  read_options.py  versioner.py
